# esp32-firebase-utils

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  sdkconfig.defaults
components/esp32_firebase_utils/: Kconfig.projbuild  firebase_auth.cc  firebase_auth.h  firestore_utils.cc  firestore_utils.h
components/firebase_utils/: CmakeLists.txt  Kconfig.projbuild  config.h  firebase_auth.cc  firebase_auth.h  firebase_common.cc  firebase_common.h  firestore.cc  firestore.h  firestore_utils.cc  firestore_utils.h  googleapis_com_chain.pem
components/firebase_utils/website_certificate/: secure_token_googleapis_chain.pem
components/wifi/: CmakeLists.txt  Kconfig.projbuild  station_mode.cc  station_mode.h
gcp_auth/: README.md  pyproject.toml
gcp_auth/script/: create_ipynb_kernel.sh  create_venv.sh
gcp_auth/src/: requirements.txt  setup.py
gcp_auth/src/gcp_service_account_utils/: main.py
main/: CMakeLists.txt  app_main.c  main.c
